# last_saviors

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  suppressions.txt
client/: CMakeLists.txt
client/src/: application.cpp  application.h  button.h  coordinate.h  event.h  event_emitter.h  grid.h  hud.h  iapplication.cpp  iapplication.h  label.h  level.h  loader.h  loader_manager.h  main.cpp  manager.h  renderer.h  tile.h  user_input.h  user_input_manager.h  widget.h
client/src/entities/: citadel.h  coordinate.h  enemy.h  grid.cpp  grid.h  hud.cpp  hud.h  level.cpp  level.h  puzzle.h  tile.cpp  tile.h  tower.h  wave.h
client/src/event/: event.cpp  event.h  event_emitter.h
client/src/managers/: equality_checker.h  event_handler.cpp  event_handler.h  functor_event_handler.cpp  functor_event_handler.h  iloader.cpp  iloader.h  loader.cpp  loader.h  loader_manager.cpp  loader_manager.h  manager.h  method_event_handler.cpp  method_event_handler.h  renderer.cpp  renderer.h  renderer_manager.cpp  renderer_manager.h  user_input.cpp  user_input.h  user_input_manager.cpp  user_input_manager.h
client/src/widgets/: button.h  widget.h
client/test/: CMakeLists.txt  test_level.cpp  test_managers.cpp  test_widgets.cpp
database/: CMakeLists.txt
database/quiz_questions/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  format.txt
database/src/MySQL/Builder/: BDDirector.cpp  BDDirector.h  DBMS.h  GameDB.h  IDBBuilder.h  IDBConn.h  MySQL.h  MySQLBuilder.cpp  MySQLBuilder.h  MySQLConn.h  bd_director.cpp  bd_director.h  dbms.h  game_db.cpp  game_db.h  idb_builder.h  my_sql.cpp  my_sql.h  my_sql_builder.cpp  my_sql_builder.h  my_sql_conn.cpp  my_sql_conn.h
database/src/MySQL/Data/: DBServerInfo.h  ProgQuestion.h  User.h  UserScore.h  db_server_info.h  prog_puzzle.h  prog_question.h  quiz_puzzle.h  quiz_question.h  user.h
database/src/MySQL/DataMappers/: IPQuestMapper.h  IQQuestMapper.h  (+17 more)
database/src/PostgresSQL/: my_db.sql
database/test/: CMakeLists.txt  test_ObjBuilder.cpp  test_Query.cpp  test_WaveGenerator.cpp  test_obj_builder.cpp  test_query.cpp  test_wave_generator.cpp
entities/: CMakeLists.txt
entities/src/: coordinate.cpp  coordinate.h  game_state.h  player.cpp  player.h  player_model.h
entities/src/level/: grid.cpp  grid.h  grid_config  itile.cpp  itile.h  level.cpp  level.h  tile.cpp  tile.h
entities/src/puzzles/: prog_puzzle.cpp  prog_puzzle.h  puzzle.cpp  puzzle.h  quiz_puzzle.cpp  quiz_puzzle.h
entities/src/units/: attackable.cpp  attackable.h  unit.cpp  unit.h
entities/src/waves/: IEnemyCreator.h  IWave.h  MindmasterCreator.cpp  PawnCreator.cpp  PawnCreator.h  wave.cpp  wave.h
entities/src/widgets/: button.cpp  button.h  hud.cpp  hud.h  label.cpp  label.h  widget.cpp  widget.h
entities/test/: CMakeLists.txt  some_enemy.h  test_attackable.cpp  test_enemy.cpp  test_mindmaster.cpp  test_pawn.cpp  test_point_damage_tower.cpp  test_tower.cpp  test_unit.cpp
game/: CMakeLists.txt
game/src/: application.cpp  application.h  button.cpp  button.h  enums.h  game_map.cpp  game_map.h  globals.cpp  globals.hpp  loader.cpp  loader.h  main.cpp  particle.cpp  particle.h  quiz_widget.cpp  quiz_widget.h  rich_text.cpp  rich_text.h  sfml_enemy.cpp  sfml_enemy.h  sfml_enemy_spawner.cpp  sfml_enemy_spawner.h  sfml_tower.cpp  sfml_tower.h  tile.cpp  tile.h  vars.cpp  vars.h
game_units/: CMakeLists.txt
game_units/src/: area_damage_tower.cpp  area_damage_tower.h  area_damage_tower_model.h  attackable_building.h  citadel.cpp  citadel.h  citadel_model.h  coordinate.h  enemy.h  mindmaster.h  mindmaster_model.h  model_factory.cpp  model_factory.h  pawn.cpp  pawn.h  pawn_model.h  player.cpp  player.h  point_damage_tower.h  point_damage_tower_model.h  shaft.h  shaft_model.h  tower.cpp  tower.h  tower_type.h  unit.cpp  unit.h
networking/: CMakeLists.txt  build.sh  build_and_test.sh  clean.sh  ideas.txt  test.sh
networking/example/: ClientMain.cpp  ServerMain.cpp
networking/include/: BinaryStream.Game.h  ClientQuiz.h  GameClientLogic.h  GameClientStruct.h  GameServerLogic.h  Packet.h  Packets.h  Serializable.h
networking/include/BinaryStream/: Packet.h  String.h
networking/networking_library/: CMakeLists.txt  build.sh  build_and_test.sh  clean.sh  test.sh
networking/networking_library/include/: BinaryStream.h  ClientLogic.h  ClientStruct.h  NetworkErrors.h  PacketBase.h  ServerLogic.h  TCPClient.h  TCPServer.h  TCPSocketBase.h  TCPSocketConnection.h
networking/networking_library/src/: BinaryStream.cpp  ClientStruct.cpp  NetworkErrors.cpp  PacketBase.cpp  TCPClient.ClientLogic.cpp  TCPClient.cpp  TCPServer.ServerLogic.cpp  TCPServer.cpp  TCPSocketBase.cpp  TCPSocketConnection.cpp
networking/networking_library/test/: BinaryStream.cpp  CMakeLists.txt  FindGMock.cmake  TCPClient.cpp  basic_networking.cpp
networking/src/: BinaryStream.Game.cpp  BinaryStream.Packet.cpp  BinaryStream.String.cpp  BinaryStream.h  ClientLogic.h  ClientMain.cpp  GameClientLogic.cpp  GameClientLogic.h  GameClientStruct.cpp  GameServer.h  GameServerLogic.cpp  GameServerLogic.h  GameServerVisitor.h  GameTCPClient.h  GameTCPServer.h  NetworkErrors.h  Packet.cpp  Packet.h  Packets.cpp  Packets.h  Serializable.h  ServerLogic.h  ServerMain.cpp  TCPClient.GameClientLogic.cpp  TCPClient.h  TCPServer.GameServerLogic.cpp  TCPServer.h  TCPSocketBase.h  TCPSocketConnection.h
networking/src/cpp/: BinaryStream.Game.cpp  BinaryStream.cpp  GameClientLogic.cpp  GameServer.cpp  GameServerLogic.cpp  GameServerVisitor.cpp  GameTCPClient.cpp  GameTCPServer.cpp  NetworkErrors.cpp  Packet.cpp  Packets.cpp  TCPClient.ClientLogic.cpp  TCPClient.GameClientLogic.cpp  TCPClient.cpp  TCPServer.GameServerLogic.cpp  TCPServer.GameServerVisitor.cpp  TCPServer.ServerLogic.cpp  TCPServer.cpp  TCPSocketBase.cpp  TCPSocketConnection.cpp
networking/test/: BinaryStream.cpp  BinaryStreamGame.cpp  CMakeLists.txt  Packets.cpp  TCPClient.cpp  TCPServer.cpp  basic_networking.cpp
test/: CMakeLists.txt  test_ObjBuilder.cpp  test_Query.cpp
(+106 files in other folders)
